--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Laporan Dana - Luxury</title>
+  <title>HOKIJITU PINJAM DANA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800;900&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -629,7 +629,7 @@
     <div class="grid">
       <div>
         <label>Dari Situs</label>
-        <input id="situs" placeholder="BOSJOKO" />
+        <input id="situs" placeholder="...." />
       </div>
       <div>
         <label>(Opsional) Catatan</label>
@@ -762,7 +762,7 @@
       namaWrap.appendChild(Object.assign(document.createElement("label"), { textContent: "Nama Rekening" }));
       const namaInput = document.createElement("input");
       namaInput.id = `nama_${i}`;
-      namaInput.placeholder = "AYU NINGSI";
+      namaInput.placeholder = "Nama Rek";
       namaWrap.appendChild(namaInput);
 
       const rekWrap = document.createElement("div");
