--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
     <div class="grid">
       <div>
         <label>Dari Situs</label>
-        <input id="situs" placeholder="...." />
+        <input id="situs" placeholder="Isi situs" />
       </div>
       <div>
         <label>(Opsional) Catatan</label>
@@ -877,3 +877,4 @@ ${blocks.trim()}`;
 
 </body>
 </html>
+
